<resources>
    <string name="app_name">LoftCoin</string>

    <!--    welcome-->
    <string name="welcome_button">НАЧАТЬ РАБОТУ</string>
    <string name="welcome_title_1">Покупка и продажа</string>
    <string name="welcome_text_1">Покупай, когда дешево, продавай, когда дорого.</string>
    <string name="welcome_title_2">Курс криптовалют</string>
    <string name="welcome_text_2">Следи за курсом валют и вовремя реагируй на изменения.Следи за курсом валют и вовремя реагируй на изменения.</string>
    <string name="welcome_title_3">Конвертер валют</string>
    <string name="welcome_text_3">Узнай, сколько эфира в одном биткоине.</string>

    <string name="wallets">Кошельки</string>
    <string name="rates">Курс</string>
    <string name="converter">Конвертер</string>
    <string name="rates_app_bar">Общий анализ</string>
    <string name="currency_menu_title">Выбор валюты</string>
    <string name="sort_menu_title">Сортировать</string>

    <string name="usd">Доллар | USD</string>
    <string name="eur">Евро | EUR</string>
    <string name="rub">Рубль | RUB</string>
    <string name="choose_currency">Выберите валюту</string>


</resources>