<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/walletsFragment">

    <fragment
        android:id="@+id/walletsFragment"
        android:name="com.leushinilya.loftcoin.ui.main.wallets.WalletsFragment"
        android:label="@string/wallets"
        tools:layout="@layout/fragment_wallets" />
    <fragment
        android:id="@+id/ratesFragment"
        android:name="com.leushinilya.loftcoin.ui.main.rates.RatesFragment"
        android:label="@string/rates_app_bar"
        tools:layout="@layout/fragment_rates" />
    <fragment
        android:id="@+id/converterFragment"
        android:name="com.leushinilya.loftcoin.ui.main.converter.ConverterFragment"
        android:label="@string/converter"
        tools:layout="@layout/fragment_converter" />

</navigation>