<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/currency_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/dark_four"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/usd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_usd_round"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:text="@string/usd"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="?attr/colorOnSurface"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/eur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_eur_round"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:text="@string/eur"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="?attr/colorOnSurface"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rub_round"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:text="@string/rub"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="?attr/colorOnSurface"/>

    </LinearLayout>

</LinearLayout>